<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/main">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonE2"
        android:layout_width="81dp"
        android:layout_height="77dp"
        android:backgroundTint="#784802"
        android:onClick="buttonPress"
        android:rotation="0"
        android:text="@string/e_2"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403" />

    <Button
        android:id="@+id/buttonA"
        android:layout_width="81dp"
        android:layout_height="77dp"
        android:backgroundTint="#784802"
        android:onClick="buttonPress"
        android:rotation="0"
        android:text="@string/a"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.24" />

    <Button
        android:id="@+id/buttonD"
        android:layout_width="81dp"
        android:layout_height="77dp"
        android:backgroundTint="#784802"
        android:onClick="buttonPress"
        android:rotation="0"
        android:text="@string/d"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/buttonStop"
        android:layout_width="127dp"
        android:layout_height="74dp"
        android:backgroundTint="#BC1E12"
        android:onClick="buttonPress"
        android:rotation="0"
        android:text="@string/stop"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <Button
        android:id="@+id/buttonG"
        android:layout_width="81dp"
        android:layout_height="77dp"
        android:backgroundTint="#784802"
        android:onClick="buttonPress"
        android:rotation="0"
        android:text="@string/g"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/buttonB"
        android:layout_width="81dp"
        android:layout_height="77dp"
        android:backgroundTint="#784802"
        android:onClick="buttonPress"
        android:rotation="0"
        android:text="@string/b"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <Button
        android:id="@+id/buttonE4"
        android:layout_width="81dp"
        android:layout_height="77dp"
        android:backgroundTint="#784802"
        android:onClick="buttonPress"
        android:rotation="0"
        android:text="@string/e_4"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.963"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.403" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="125dp"
        android:layout_height="34dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:text="@string/inactive"
        android:textAlignment="center"
        android:textColor="#FB0000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivProgress"
        android:layout_width="413dp"
        android:layout_height="93dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivBackground"
        app:layout_constraintVertical_bias="0.669"
        app:srcCompat="@drawable/progress_null"
        android:contentDescription="@string/todo" />


</androidx.constraintlayout.widget.ConstraintLayout>