<resources>
    <string name="app_name">MyGuitarTuner</string>
    <string name="e_4">e_4</string>
    <string name="e_2">E_2</string>
    <string name="a">A</string>
    <string name="d">D</string>
    <string name="g">G</string>
    <string name="b">B</string>
    <string name="stop">stop</string>
    <string name="inactive">INACTIVE</string>
    <string name="todo">TODO</string>
</resources>